--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <section id="projects">
         <h4 class="project-title">Documentation Page Project</h4>
         <a target="_blank" href="https://codepen.io/deijiii/pen/rNGyGdo">Go to the project</a>
-        <img id="Doc-page" src="images/project1.png" alt="project1">
+        <img id="Doc-page" src="project1.png" alt="project1">
         <h4 class="project-title">Tribute Page Project</h4>
         <a target="_blank" href="https://codepen.io/deijiii/pen/QWqEaYV">Go to the project</a>
-        <img id="Tribute-page" src="images/project2.png" alt="project2">
+        <img id="Tribute-page" src="project2.png" alt="project2">
         <h4 class="project-title">Survey Form Project</h4>
         <a target="_blank" href="https://codepen.io/deijiii/pen/yLzVzeR">Go to the project</a>
-        <img id="Survey-Form" src="images/project3.png" alt="project3">
+        <img id="Survey-Form" src="project3.png" alt="project3">
     </section>
     <nav id="navbar">
         <a href="#projects">Projects</a>
